--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-time-machine
 title: Kevin Xu Project 1
 description: "Hello World" github page for DATA 410
