--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Kevin Xu Project 1
 description: "Hello World" github page for DATA 410
