--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Kevin Xu Project 1
+title: Kevin Xu DATA 410 Project 1
 description: This is my Hello World assignment for DATA 410
